unpackaged/main/default/objects/Webcasts_Attendee_Data__c/Webcasts_Attendee_Data__c.object-meta.xml
<CustomObject>
    <description>The Webcasts Activity Feeder provides event registration and attendance data into Salesforce for reporting, segmentation.</description>
    <label>Webcasts Attendee Data</label>
    <nameField>
        <label>Webcasts Attendee Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webcasts Attendees Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>