unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Title__c</fullName>
    <label>Event Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>