unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <label>Fax Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>