unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <externalId>true</externalId>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>