unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>