unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Webcasts Attendees Data</relationshipLabel>
    <relationshipName>Webcasts_Attendees_Data</relationshipName>
    <type>Lookup</type>
</CustomField>