unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Live_Duration__c.field-meta.xml
<CustomField>
    <fullName>Live_Duration__c</fullName>
    <label>Live Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>