unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Live_Session_End__c.field-meta.xml
<CustomField>
    <fullName>Live_Session_End__c</fullName>
    <label>Live Session End</label>
    <type>DateTime</type>
</CustomField>