unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Live_Session_Start__c.field-meta.xml
<CustomField>
    <fullName>Live_Session_Start__c</fullName>
    <label>Live Session Start</label>
    <type>DateTime</type>
</CustomField>