unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/OD_Duration__c.field-meta.xml
<CustomField>
    <fullName>OD_Duration__c</fullName>
    <label>OD Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>