unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/OD_Session_End__c.field-meta.xml
<CustomField>
    <fullName>OD_Session_End__c</fullName>
    <label>OD Session End</label>
    <type>DateTime</type>
</CustomField>