unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/OD_Session_Start__c.field-meta.xml
<CustomField>
    <fullName>OD_Session_Start__c</fullName>
    <label>OD Session Start</label>
    <type>DateTime</type>
</CustomField>