unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>