unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Primary_Interest_Topic__c.field-meta.xml
<CustomField>
    <fullName>Primary_Interest_Topic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Interest - Topic</label>
    <type>Checkbox</type>
</CustomField>