unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/SIM_Live_Duration__c.field-meta.xml
<CustomField>
    <fullName>SIM_Live_Duration__c</fullName>
    <label>SIM Live Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>