unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/SIM_Live_Session_End__c.field-meta.xml
<CustomField>
    <fullName>SIM_Live_Session_End__c</fullName>
    <label>SIM Live Session End</label>
    <type>DateTime</type>
</CustomField>