unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Unsubscribe_Flag__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribe Flag</label>
    <type>Checkbox</type>
</CustomField>