unpackaged/main/default/objects/Webcasts_Attendee_Data__c/fields/Webcasts__c.field-meta.xml
<CustomField>
    <fullName>Webcasts__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Webcasts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>